src/objects/Apttus_Revenue2__Agreement_Trueup__c.object
<CustomObject>
    <description>Represents guaranteed units or amount for an agreement</description>
    <fields>
        <fullName>Apttus_Revenue2__Actual_End_Date__c</fullName>
        <formula>IF( NOT(ISNULL(Apttus_Revenue2__Fixed_End_Date__c)), Apttus_Revenue2__Fixed_End_Date__c, IF(NOT(ISNULL(Apttus_Revenue2__End_Milestone_Actual_Date__c)), Apttus_Revenue2__End_Milestone_Actual_Date__c, Apttus_Revenue2__End_Milestone_Expected_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Actual_Start_Date__c</fullName>
        <formula>IF( NOT(ISNULL(Apttus_Revenue2__Fixed_Start_Date__c)), Apttus_Revenue2__Fixed_Start_Date__c, IF(NOT(ISNULL(Apttus_Revenue2__Start_Milestone_Actual_Date__c)), Apttus_Revenue2__Start_Milestone_Actual_Date__c, Apttus_Revenue2__Start_Milestone_Expected_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement__c</fullName>
        <description>Associated agreement</description>
        <inlineHelpText>Associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Trueups</relationshipLabel>
        <relationshipName>Agreement_Trueups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Cumulative_Actual_Amount__c</fullName>
        <description>Cumulative actual amount</description>
        <inlineHelpText>Cumulative actual amount</inlineHelpText>
        <label>Cumulative Actual Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Cumulative_Prepaid_Amount__c</fullName>
        <description>Cumulative prepaid amount associated with the trueup</description>
        <inlineHelpText>Cumulative prepaid amount associated with the trueup</inlineHelpText>
        <label>Cumulative Prepaid Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Cumulative_Recognized_Amount__c</fullName>
        <description>Cumulative recognized amount for the trueup</description>
        <inlineHelpText>Cumulative recognized amount for the trueup</inlineHelpText>
        <label>Cumulative Recognized Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Current_Period_Date__c</fullName>
        <description>The current period date</description>
        <inlineHelpText>The current period date</inlineHelpText>
        <label>Current Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Current_Period_Number__c</fullName>
        <description>The current period number</description>
        <inlineHelpText>The current period number</inlineHelpText>
        <label>Current Period Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Deferred_Balance_Amount__c</fullName>
        <description>Deferred prepaid amount (trueup balance)</description>
        <inlineHelpText>Deferred prepaid amount (trueup balance)</inlineHelpText>
        <label>Deferred Balance Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Due_Date__c</fullName>
        <description>Trueup due date</description>
        <inlineHelpText>Trueup due date</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__End_Milestone_Actual_Date__c</fullName>
        <formula>Apttus_Revenue2__End_Milestone__r.Apttus_Revenue2__Actual_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Milestone Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__End_Milestone_Expected_Date__c</fullName>
        <formula>Apttus_Revenue2__End_Milestone__r.Apttus_Revenue2__Expected_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Milestone Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__End_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Milestone associated with the end date</description>
        <inlineHelpText>Milestone associated with the end date</inlineHelpText>
        <label>End Milestone</label>
        <referenceTo>Apttus_Revenue2__Milestone__c</referenceTo>
        <relationshipLabel>Agreement Trueups (End Milestone)</relationshipLabel>
        <relationshipName>Agreement_Trueups_End_Milestone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Fixed_End_Date__c</fullName>
        <label>Fixed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Fixed_Start_Date__c</fullName>
        <label>Fixed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Cumulative_Actual_Amount__c</fullName>
        <description>Forecast cumulative actual amount</description>
        <inlineHelpText>Forecast cumulative actual amount</inlineHelpText>
        <label>Forecast Cumulative Actual Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Cumulative_Prepaid_Amount__c</fullName>
        <description>Forecast cumulative prepaid amount</description>
        <inlineHelpText>Forecast cumulative prepaid amount</inlineHelpText>
        <label>Forecast Cumulative Prepaid Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Cumulative_Recognized_Amount__c</fullName>
        <description>Forecast cumulative recognized amount</description>
        <inlineHelpText>Forecast cumulative recognized amount</inlineHelpText>
        <label>Forecast Cumulative Recognized Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Deferred_Balance_Amount__c</fullName>
        <description>Forecast deferred balance amount</description>
        <inlineHelpText>Forecast deferred balance amount</inlineHelpText>
        <label>Forecast Deferred Balance Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forecast trueup active indicator</description>
        <inlineHelpText>Forecast trueup active indicator</inlineHelpText>
        <label>Forecast Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Period_Date__c</fullName>
        <description>The forecast period date</description>
        <inlineHelpText>The forecast period date</inlineHelpText>
        <label>Forecast Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Period_Number__c</fullName>
        <description>Forecast period number</description>
        <inlineHelpText>Forecast period number</inlineHelpText>
        <label>Forecast Period Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Guaranteed_Amount__c</fullName>
        <description>Amount guaranteed by the trueup</description>
        <inlineHelpText>Amount guaranteed by the trueup</inlineHelpText>
        <label>Guaranteed Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Guaranteed_Units2__c</fullName>
        <description>Units guaranteed by the trueup</description>
        <inlineHelpText>Units guaranteed by the trueup</inlineHelpText>
        <label>Guaranteed Units</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Guaranteed_Units__c</fullName>
        <description>Units guaranteed by the trueup</description>
        <inlineHelpText>Units guaranteed by the trueup</inlineHelpText>
        <label>Guaranteed Units (Old)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Invoice_Date__c</fullName>
        <description>Invoice date</description>
        <inlineHelpText>Invoice date</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Invoice_Number__c</fullName>
        <description>Invoice number</description>
        <inlineHelpText>Invoice number</inlineHelpText>
        <label>Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trueup Active Indicator</description>
        <inlineHelpText>Indicates whether the trueup is available for revenue recognition</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Is_End_Date_Milestone_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is End Date Milestone Based?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Is_Start_Date_Milestone_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Start Date Milestone Based?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__RevRec_Rule__c</fullName>
        <description>Revenue recognition rule</description>
        <inlineHelpText>Revenue recognition rule</inlineHelpText>
        <label>RevRec Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ratable</fullName>
                    <default>true</default>
                    <label>Ratable</label>
                </value>
                <value>
                    <fullName>Immediate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__RevRec_Term_Months__c</fullName>
        <description>Indicates the revenue recognition term in months from the start date</description>
        <inlineHelpText>Indicates the revenue recognition term in months from the start date</inlineHelpText>
        <label>RevRec Term (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__RevRec_Term__c</fullName>
        <description>Indicates the revenue recognition term in months from the start date</description>
        <inlineHelpText>Indicates the revenue recognition term in months from the start date</inlineHelpText>
        <label>RevRec Term</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Revenue_Subtype__c</fullName>
        <description>Revenue subtype</description>
        <inlineHelpText>Revenue subtype</inlineHelpText>
        <label>Revenue Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Revenue2__Revenue_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Active User Server Fees</fullName>
                </value>
                <value>
                    <fullName>Software Maintenance</fullName>
                </value>
                <value>
                    <fullName>Porting</fullName>
                </value>
                <value>
                    <fullName>Link Updates</fullName>
                </value>
                <value>
                    <fullName>Database Updates</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Finger Print Updates</fullName>
                </value>
                <value>
                    <fullName>Advertising Revenue</fullName>
                </value>
                <value>
                    <fullName>Commission Income</fullName>
                </value>
                <value>
                    <fullName>Ecommerce Revenue</fullName>
                </value>
                <value>
                    <fullName>Flat Fee Income</fullName>
                </value>
                <value>
                    <fullName>Production based</fullName>
                </value>
                <value>
                    <fullName>Revenue Share</fullName>
                </value>
                <value>
                    <fullName>SW License</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Revenue_Type__c</fullName>
        <description>Revenue type</description>
        <inlineHelpText>Revenue type</inlineHelpText>
        <label>Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Start_Milestone_Actual_Date__c</fullName>
        <formula>Apttus_Revenue2__Start_Milestone__r.Apttus_Revenue2__Actual_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Milestone Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Start_Milestone_Expected_Date__c</fullName>
        <formula>Apttus_Revenue2__Start_Milestone__r.Apttus_Revenue2__Expected_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Milestone Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Start_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Milestone associated with the start date</description>
        <inlineHelpText>Milestone associated with the start date</inlineHelpText>
        <label>Start Milestone</label>
        <referenceTo>Apttus_Revenue2__Milestone__c</referenceTo>
        <relationshipLabel>Agreement Trueups (Start Milestone)</relationshipLabel>
        <relationshipName>Agreement_Trueups_Start_Milestone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Term_Months__c</fullName>
        <description>Indicates the duration in months from the start date</description>
        <inlineHelpText>Indicates the duration in months from the start date</inlineHelpText>
        <label>Term (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agreement Trueup</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Agreement Trueup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Trueups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Apttus_Revenue2__Guaranteed_Amount_Required</fullName>
        <active>true</active>
        <description>Guranteed Amount is required</description>
        <errorConditionFormula>OR(ISNULL( Apttus_Revenue2__Guaranteed_Amount__c),  Apttus_Revenue2__Guaranteed_Amount__c &lt;= 0)</errorConditionFormula>
        <errorDisplayField>Apttus_Revenue2__Guaranteed_Amount__c</errorDisplayField>
        <errorMessage>Enter the guaranteed amount.</errorMessage>
    </validationRules>
</CustomObject>